--- a/index.html
+++ b/index.html
@@ -21,33 +21,34 @@
       <div class="bg-image">
         <div class="overlay"></div>
       </div>
+      <div class="content">
+        <h1 class="title">
+          Get <span class="change-color">insights</span> that help your business
+          grow.
+        </h1>
 
-      <h1 class="title">
-        Get <span class="change-color">insights</span> that help your business
-        grow.
-      </h1>
+        <p class="desc">
+          Discover the benefits of data analytics and make better decisions
+          regarding revenue, customer experience, and overall efficiency.
+        </p>
 
-      <p class="desc">
-        Discover the benefits of data analytics and make better decisions
-        regarding revenue, customer experience, and overall efficiency.
-      </p>
+        <ul class="list">
+          <li>
+            <h2 class="subtitle">10k+</h2>
+            <p>companies</p>
+          </li>
 
-      <ul>
-        <li>
-          <h2>10k+</h2>
-          <p>companies</p>
-        </li>
+          <li>
+            <h2 class="subtitle">314</h2>
+            <p>templates</p>
+          </li>
 
-        <li>
-          <h2>314</h2>
-          <p>templates</p>
-        </li>
-
-        <li>
-          <h2>12m+</h2>
-          <p>queries</p>
-        </li>
-      </ul>
+          <li>
+            <h2 class="subtitle">12m+</h2>
+            <p>queries</p>
+          </li>
+        </ul>
+      </div>
     </div>
 
     <div class="attribution">
