--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,7 +17,7 @@
     <title>Frontend Mentor | Stats preview card component</title>
   </head>
   <body>
-    <div class="container">
+    <main class="container">
       <div class="bg-image">
         <div class="overlay"></div>
       </div>
@@ -49,9 +49,9 @@
           </li>
         </ul>
       </div>
-    </div>
+    </main>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a
         href="https://www.frontendmentor.io/challenges/stats-preview-card-component-8JqbgoU62/hub/stats-preview-card-component-JDlfbc2yz"
